--- a/index.html
+++ b/index.html
@@ -318,6 +318,6 @@
     });
     </script>
 
-
-</body>
+    <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+</body>    
 </html>
