--- a/index.html
+++ b/index.html
@@ -1479,6 +1479,9 @@
             linkedin.com/in/davide-k
             </a>
         </div>
+        <div class="icons8-attribution">
+            <a href="https://icons8.com" target="_blank" rel="noopener noreferrer">Icons by Icons8</a>
+        </div>
     </footer>
     <script>
         function setLang(langCode) {
@@ -2127,3 +2130,4 @@
 
 </body>
 </html>
+
